Refactor ProductsController: Simplify methods, add conversion method, and improve response handling